--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ bevy_rand = "0.5.2"
 bevy_prng = { version = "0.5.2", features = ["rand_chacha", "wyrand"] }
 bevy-inspector-egui = "0.23.4"
 rand = "0.9.0-alpha.1"
+koto = "0.14.0"
