--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ bevy_prng = { version = "0.5.2", features = ["rand_chacha", "wyrand"] }
 bevy-inspector-egui = "0.23.4"
 rand = "0.9.0-alpha.1"
 koto = "0.14.0"
+thunderdome = "0.6.1"
