--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ opt-level = 1
 
 [dependencies]
 bevy = { version = "0.13.2" }
+bevy_ecs_tilemap = { version = "0.12.0", features = ["render"], git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
 bevy_ecs_ldtk = "0.9.0"
 rand_core = "0.6"
 bevy_rand = "0.5.2"
