--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -20,7 +20,9 @@ jobs:
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
+        override: true
         profile: minimal
         toolchain: stable
+        components: clippy
     - name: Build
       run: cargo build --verbose && cargo test --verbose
