--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         override: true
         profile: minimal
-        toolchain: stable
+        toolchain: nightly
         components: clippy
     - name: Build
       run: cargo build --verbose && cargo test --verbose
