--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ bevy_ecs_ldtk = "0.9.0"
 rand_core = "0.6"
 bevy_rand = "0.5.2"
 bevy_prng = { version = "0.5.2", features = ["rand_chacha", "wyrand"] }
+bevy_ui = "0.13.2"
 bevy-inspector-egui = "0.23.4"
 rand = "0.9.0-alpha.1"
 koto = "0.14.0"
 thunderdome = "0.6.1"
 stopwatch = "0.0.7"
+bladeink = "1.0.3"
+ron = "0.9.0-alpha.0"
